--- a/public/index.html
+++ b/public/index.html
@@ -68,12 +68,11 @@
       class="flex-center logo-wrapper header-center"
     >
       <img class="logo" src="violetlogo.png" alt="Ultraviolet" />
-      <h1>Ultraviolet | TN</h1>
+      <h1>Photon - Website Unblocker</h1>
     </div>
     <div class="flex-center desc">
       <p>
-        Ultraviolet is highly sophisticated proxy used for evading internet
-        censorship.
+        Forked from Ultraviolet
       </p>
     </div>
 
