--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Photon - Website Unblocker</title>
-    <meta
-      name="description"
-      content="ultraviolet fork"
-    />
-    <meta
-      name="keywords"
-      content="photon, proxy, web proxy, ultraviolet, service workers, unblock websites, unblock chromebook, free web proxy, proxy list, proxy sites, un block chromebook, online proxy, proxy server, proxysite, proxy youtube, bypass securly, bypass iboss, bypass lightspeed filter, holy unblocker, chromebooks, titanium network, unblock youtube, youtube proxy, unblocked youtube, youtube unblocked"
-    />
-    <meta
-      name="theme-color"
-      media="(prefers-color-scheme: dark)"
-      content="#434c5e"
-    />
-    <meta name="googlebot" content="index, follow, snippet" />
-    <link rel="shortcut icon" content="favicon.ico" />
-    <link rel="stylesheet" href="index.css" />
-    <script src="uv/uv.bundle.js" defer></script>
-    <script src="uv/uv.config.js" defer></script>
-    <script src="register-sw.js" defer></script>
-    <script src="search.js" defer></script>
-    <script src="index.js" defer></script>
+    <meta name="description" content="ultraviolet fork">
+    <meta name="keywords" content="photon, proxy, web proxy, ultraviolet, service workers, unblock websites, unblock chromebook, free web proxy, proxy list, proxy sites, un block chromebook, online proxy, proxy server, proxysite, proxy youtube, bypass securly, bypass iboss, bypass lightspeed filter, holy unblocker, chromebooks, titanium network, unblock youtube, youtube proxy, unblocked youtube, youtube unblocked">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#434c5e">
+    <meta name="googlebot" content="index, follow, snippet">
+    <link rel="shortcut icon" content="favicon.ico">
+    <link rel="stylesheet" href="index.css">
+    <script src="uv/uv.bundle.js" defer=""></script>
+    <script src="uv/uv.config.js" defer=""></script>
+    <script src="register-sw.js" defer=""></script>
+    <script src="search.js" defer=""></script>
+    <script src="index.js" defer=""></script>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -60,60 +47,106 @@
         ]
       }
     </script>
-  </head>
+    <style>
+      body {
+        overflow: hidden;
+      }
+      #orange-page {
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background-color: orange;
+        top: 100%;
+        transition: top 1s ease;
+      }
+      #orange-page.active {
+        top: 0;<style>
+  body {
+    overflow: hidden;
+  }
 
-  <body>
-    <div
-      title="Ultraviolet Logo"
-      class="flex-center logo-wrapper header-center"
-    >
-      <img class="logo" src="violetlogo.png" alt="Ultraviolet" />
-      <h1>Photon - Website Unblocker</h1>
-    </div>
-    <div class="flex-center desc">
-      <p>
-        Forked from Ultraviolet
-      </p>
-    </div>
+  #orange-page {
+    height: 100vh;
+    background-color: orange;
+    display: none;
+  }
 
-    <form id="uv-form" class="flex-center">
-      <input
-        id="uv-search-engine"
-        value="https://www.google.com/search?q=%s"
-        type="hidden"
-      />
-      <input id="uv-address" type="text" placeholder="Search the web freely" />
-    </form>
-    <div class="desc left-margin">
-      <p id="uv-error"></p>
-      <pre id="uv-error-code"></pre>
-    </div>
-    <footer>
-      <a
-        title="The TitaniumNetwork GitHub organization"
-        href="https://github.com/titaniumnetwork-dev"
-        >TitaniumNetwork</a
-      >
-      <a title="The TitaniumNetwork Discord" href="https://discord.gg/unblock"
-        >Discord</a
-      >
-      <a
-        title="The TompHTTP GitHub organization"
-        href="https://github.com/tomphttp"
-        >TompHTTP</a
-      >
-      <a
-        title="The official deployment repository for Ultraviolet"
-        href="https://github.com/titaniumnetwork-dev/Ultraviolet-App"
-        >GitHub</a
-      >
-      <a
-        title="License information"
-        href="credits.html"
-        style="margin-left: auto"
-        >Credits</a
-      >
-      <span>Ultraviolet &copy; TN 2023</span>
-    </footer>
-  </body>
-</html>
+  #go-down {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+    cursor: pointer;
+  }
+
+  #go-up {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
+  }
+</style>
+
+<body>
+  <div title="Ultraviolet Logo" class="flex-center logo-wrapper header-center">
+    <img class="logo" src="violetlogo.png" alt="Ultraviolet">
+    <h1>Photon - Website Unblocker</h1>
+  </div>
+  <div class="flex-center desc">
+    <p>
+      Forked from Ultraviolet
+    </p>
+  </div>
+
+  <form id="uv-form" class="flex-center">
+    <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden">
+    <input id="uv-address" type="text" placeholder="Search the web freely">
+  </form>
+  <div class="desc left-margin">
+    <p id="uv-error"></p>
+    <pre id="uv-error-code"></pre>
+  </div>
+  <footer>
+    <a title="The TitaniumNetwork GitHub organization" href="https://github.com/titaniumnetwork-dev">TitaniumNetwork</a>
+    <a title="The TitaniumNetwork Discord" href="https://discord.gg/unblock">Discord</a>
+    <a title="The TompHTTP GitHub organization" href="https://github.com/tomphttp">TompHTTP</a>
+    <a title="The official deployment repository for Ultraviolet" href="https://github.com/titaniumnetwork-dev/Ultraviolet-App">GitHub</a>
+    <a title="License information" href="credits.html" style="margin-left: auto">Credits</a>
+    <span>Ultraviolet © TN 2023</span>
+  </footer>
+
+  <div id="orange-page">
+    <div id="go-up">GO BACK TO BROWSER</div>
+  </div>
+  <div id="go-down">SCROLL DOWN</div>
+
+  <script>
+    const goDownBtn = document.getElementById('go-down');
+    const goUpBtn = document.getElementById('go-up');
+    const orangePage = document.getElementById('orange-page');
+
+    goDownBtn.addEventListener('click', () => {
+      orangePage.style.display = 'block';
+      goDownBtn.style.display = 'none';
+      goUpBtn.style.display = 'block';
+      window.scrollTo({
+        top: document.body.scrollHeight,
+        behavior: 'smooth'
+      });
+    });
+
+    goUpBtn.addEventListener('click', () => {
+      orangePage.style.display = 'none';
+      goDownBtn.style.display = 'block';
+      goUpBtn.style.display = 'none';
+      window.scrollTo({
+        top: 0,
+        behavior: 'smooth'
+      });
+    });
+  </script>
+</body>
