--- a/public/index.html
+++ b/public/index.html
@@ -1,188 +1,57 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
-
-body {
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
-  margin: 0;
-  background: linear-gradient(to bottom, #4b106b, #ff6500);
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
- overflow: hidden;
-}
-
-.fa-magnifying-glass {
-  color: white;
-}
-
-.flex-center {
-  display: flex;
-  justify-content: center;
-}
-
-.header-center {
-  align-items: center;
-  flex-direction: column;
-  margin-top: 10%;
-}
-
-.left-margin {
-  margin: 0px 16px;
-}
-
-#uv-error {
-  color: #ff6666 !important;
-  white-space: pre-wrap;
-}
-
-#scroll-down {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 20px;
-  cursor: pointer;
-}
-#orange-page {
-  height: 100vh;
-  background-color: orange;
-}
-
-#uv-error-code {
-  font-size: 12px;
-  color: #fff;
-  font-family: "Courier New", Courier, monospace;
-}
-
-#uv-register-sw {
-  color: white;
-  background: #555555;
-  cursor: pointer;
-  outline: none;
-  border: none;
-  border-radius: 6px;
-  padding: 16px 20px;
-  line-height: 16px;
-  display: none;
-}
-
-#uv-register-sw:active {
-  background: #333333;
-}
-
-#uv-register-sw.show {
-  display: block;
-}
-
-.logo {
-  width: 150px;
-  height: 150px;
-}
-
-.logo-wrapper .text {
-  font-size: 75px;
-  color: #fff;
-}
-
-.logo-wrapper h1 {
-  color: white;
-}
-
-footer {
-  margin-top: auto;
-  width: 93%;
-  align-self: center;
-  height: 80px;
-  display: flex;
-  justify-content: left;
-  align-items: center;
-}
-
-footer a,
-footer span {
-  margin: 0 15px;
-  text-decoration: none;
-  color: #fff;
-  font-size: 15px;
-}
-
-footer a {
-  cursor: pointer;
-}
-
-footer a:hover {
-  text-decoration: underline;
-}
-
-.desc p {
-  width: 560px;
-  color: rgb(128, 27, 183);
-}
-
-#uv-address {
-  background: none;
-  font-family: inherit;
-  padding: 0px 17px;
-  height: 48px;
-  border: 1px solid rgb(39, 8, 56);
-  color: #270838;
-  border-radius: 3px;
-  outline: none;
-  width: 350px;
-  margin-top: 5px;
-  border-radius: 50px;
-  color: #cf25ff;
-  transition: border-radius 0.1s;
-}
-#uv-address::placeholder {
-  color: #ff6500;
-}
-#uv-address:focus {
-  border: 1px solid rgb(178, 37, 255);
-  border-radius: 6px;
-}
-
-.credit {
-  border-radius: 10px;
-  padding: 10px;
-  display: block;
-  border: #fff 1px solid;
-  color: #fff;
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 15px;
-}
-
-.credit label {
-  margin-left: auto;
-  margin-right: 15px;
-}
-
-.credit a,
-.credit label {
-  color: white;
-  text-decoration: underline;
-  text-align: right;
-}
-
-.credit pre {
-  display: none;
-  width: 100%;
-}
-
-.credit label::after {
-  content: "show license";
-  cursor: pointer;
-}
-
-.credit input:checked + label::after {
-  content: "hide license";
-}
-
-.credit input:checked ~ pre {
-  display: block;
-}
-
-  #orange-page {
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Photon - Website Unblocker</title>
+    <meta name="description" content="ultraviolet fork">
+    <meta name="keywords" content="photon, proxy, web proxy, ultraviolet, service workers, unblock websites, unblock chromebook, free web proxy, proxy list, proxy sites, un block chromebook, online proxy, proxy server, proxysite, proxy youtube, bypass securly, bypass iboss, bypass lightspeed filter, holy unblocker, chromebooks, titanium network, unblock youtube, youtube proxy, unblocked youtube, youtube unblocked">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#434c5e">
+    <meta name="googlebot" content="index, follow, snippet">
+    <link rel="shortcut icon" content="favicon.ico">
+    <link rel="stylesheet" href="index.css">
+    <script src="uv/uv.bundle.js" defer=""></script>
+    <script src="uv/uv.config.js" defer=""></script>
+    <script src="register-sw.js" defer=""></script>
+    <script src="search.js" defer=""></script>
+    <script src="index.js" defer=""></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What is Ultraviolet (Web Proxy)?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers and more!"
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How do I unblock sites using Ultraviolet?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Simply head to an official site featuring Ultraviolet such as Holy Unblocker or Incognito! You can also self-host Ultraviolet on your own web server for maximum privacy."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What if Ultraviolet is blocked or not working?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Join the Titanium Network Discord at discord.gg/unblock!"
+            }
+          }
+        ]
+      }
+    </script>
+    <style>
+      body {
+        overflow: hidden;
+      }
+      #orange-page {
         position: absolute;
         width: 100%;
         height: 100vh;
@@ -191,8 +60,7 @@ footer a:hover {
         transition: top 1s ease;
       }
       #orange-page.active {
-        top: 0;
-}
+        top: 0;<style>
   body {
     overflow: hidden;
   }
@@ -203,21 +71,82 @@ footer a:hover {
     display: none;
   }
 
+  #go-down {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+    cursor: pointer;
+  }
 
   #go-up {
     position: fixed;
     top: 0;
     left: 50%;
-    transform: translate(-50%);
+    transform: translate(-50%, -50%);
     font-size: 24px;
     cursor: pointer;
     display: none;
   }
-#go-down {
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  cursor: pointer;
+</style>
 
-}
+<body>
+  <div title="Ultraviolet Logo" class="flex-center logo-wrapper header-center">
+    <img class="logo" src="violetlogo.png" alt="Ultraviolet">
+    <h1>Photon - Website Unblocker</h1>
+  </div>
+  <div class="flex-center desc">
+    <p>
+      Forked from Ultraviolet
+    </p>
+  </div>
+
+  <form id="uv-form" class="flex-center">
+    <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden">
+    <input id="uv-address" type="text" placeholder="Search the web freely">
+  </form>
+  <div class="desc left-margin">
+    <p id="uv-error"></p>
+    <pre id="uv-error-code"></pre>
+  </div>
+  <footer>
+    <a title="The TitaniumNetwork GitHub organization" href="https://github.com/titaniumnetwork-dev">TitaniumNetwork</a>
+    <a title="The TitaniumNetwork Discord" href="https://discord.gg/unblock">Discord</a>
+    <a title="The TompHTTP GitHub organization" href="https://github.com/tomphttp">TompHTTP</a>
+    <a title="The official deployment repository for Ultraviolet" href="https://github.com/titaniumnetwork-dev/Ultraviolet-App">GitHub</a>
+    <a title="License information" href="credits.html" style="margin-left: auto">Credits</a>
+    <span>Ultraviolet © TN 2023</span>
+  </footer>
+
+  <div id="orange-page">
+    <div id="go-up">GO BACK TO BROWSER</div>
+  </div>
+  <div id="go-down">SCROLL DOWN</div>
+
+  <script>
+    const goDownBtn = document.getElementById('go-down');
+    const goUpBtn = document.getElementById('go-up');
+    const orangePage = document.getElementById('orange-page');
+
+    goDownBtn.addEventListener('click', () => {
+      orangePage.style.display = 'block';
+      goDownBtn.style.display = 'none';
+      goUpBtn.style.display = 'block';
+      window.scrollTo({
+        top: document.body.scrollHeight,
+        behavior: 'smooth'
+      });
+    });
+
+    goUpBtn.addEventListener('click', () => {
+      orangePage.style.display = 'none';
+      goDownBtn.style.display = 'block';
+      goUpBtn.style.display = 'none';
+      window.scrollTo({
+        top: 0,
+        behavior: 'smooth'
+      });
+    });
+  </script>
+</body>
